--- a/deps/software-level/makefiles/Makefile.env
+++ b/deps/software-level/makefiles/Makefile.env
@@ -10,22 +10,26 @@ ARCH := $(shell uname -m)
 ifeq ($(ARCH),x86_64)
 	ifeq ($(wildcard $(CC)),)
 		ifeq ($(USE_OPEN_GNU_GCC),0)
-		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm x86_64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-riscv-gnu-toolchain.tar.xz || rm x86_64-riscv-gnu-toolchain.tar.xz)
 		shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/gcc)
 		shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/gcc && mv x86_64-riscv-gnu-toolchain.tar.xz ${SOTFWARE_TOOLS_DIR}/gcc && cd ${SOTFWARE_TOOLS_DIR}/gcc && tar -xvf x86_64-riscv-gnu-toolchain.tar.xz && rm x86_64-riscv-gnu-toolchain.tar.xz)
 		else
-		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm x86_64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-open_riscv-gnu-toolchain.tar.xz || rm x86_64-open_riscv-gnu-toolchain.tar.xz)
 		shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/gcc_open)
 		shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/gcc_open && mv x86_64-open_riscv-gnu-toolchain.tar.xz ${SOTFWARE_TOOLS_DIR}/gcc_open && cd ${SOTFWARE_TOOLS_DIR}/gcc_open && tar -xvf x86_64-open_riscv-gnu-toolchain.tar.xz && rm x86_64-open_riscv-gnu-toolchain.tar.xz)
 		endif
 	endif
 	ifeq ($(wildcard $(OPENOCD)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd-12.0_x86_64.tar.xz)
+	shell := $(shell rm openocd-12.0_x86_64.tar.xz)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd-12.0_x86_64.tar.xz ||  rm openocd-12.0_x86_64.tar.xz)
 	shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/openocd)
 	shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/openocd && mv openocd-12.0_x86_64.tar.xz ${SOTFWARE_TOOLS_DIR}/openocd && cd ${SOTFWARE_TOOLS_DIR}/openocd && tar -xvf openocd-12.0_x86_64.tar.xz && rm openocd-12.0_x86_64.tar.xz)
 	endif
 	ifeq ($(wildcard $(QEMU_EXEC)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64_qemu-riscv.tar.xz)
+	shell := $(shell rm openocd-12.0_x86_64.tar.xz)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64_qemu-riscv.tar.xz || rm openocd-12.0_x86_64.tar.xz)
 	shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/qemu)
 	shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/qemu && mv x86_64_qemu-riscv.tar.xz ${SOTFWARE_TOOLS_DIR}/qemu && cd ${SOTFWARE_TOOLS_DIR}/qemu && tar -xvf x86_64_qemu-riscv.tar.xz && rm x86_64_qemu-riscv.tar.xz)
 	endif
@@ -34,22 +38,26 @@ else ifeq ($(ARCH),aarch64)
 
 	ifeq ($(wildcard $(CC)),)
 		ifeq ($(USE_OPEN_GNU_GCC),0)
-		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm arm64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-riscv-gnu-toolchain.tar.xz || rm arm64-riscv-gnu-toolchain.tar.xz)
 		shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/gcc)
 		shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/gcc && mv arm64-riscv-gnu-toolchain.tar.xz ${SOTFWARE_TOOLS_DIR}/gcc && cd ${SOTFWARE_TOOLS_DIR}/gcc && tar -xvf arm64-riscv-gnu-toolchain.tar.xz && rm arm64-riscv-gnu-toolchain.tar.xz)
 		else
-		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm arm64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-open_riscv-gnu-toolchain.tar.xz || rm arm64-open_riscv-gnu-toolchain.tar.xz)
 		shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/gcc_open)
 		shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/gcc_open && mv arm64-open_riscv-gnu-toolchain.tar.xz ${SOTFWARE_TOOLS_DIR}/gcc_open && cd ${SOTFWARE_TOOLS_DIR}/gcc_open && tar -xvf arm64-open_riscv-gnu-toolchain.tar.xz && rm arm64-open_riscv-gnu-toolchain.tar.xz)
 		endif
 	endif
 	ifeq ($(wildcard $(OPENOCD)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd-12.0_arm64.tar.xz)
+	shell := $(shell rm openocd-12.0_arm64.tar.xz)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd-12.0_arm64.tar.xz || rm openocd-12.0_arm64.tar.xz)
 	shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/openocd)
 	shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/openocd && mv openocd-12.0_arm64.tar.xz ${SOTFWARE_TOOLS_DIR}/openocd && cd ${SOTFWARE_TOOLS_DIR}/openocd && tar -xvf openocd-12.0_arm64.tar.xz && rm openocd-12.0_arm64.tar.xz)
 	endif
 	ifeq ($(wildcard $(QEMU_EXEC)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64_qemu-riscv.tar.xz)
+	shell := $(shell rm arm64_qemu-riscv.tar.xz)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64_qemu-riscv.tar.xz || rm arm64_qemu-riscv.tar.xz)
 	shell := $(shell rm -rf ${SOTFWARE_TOOLS_DIR}/qemu)
 	shell := $(shell mkdir -p ${SOTFWARE_TOOLS_DIR}/qemu && mv arm64_qemu-riscv.tar.xz ${SOTFWARE_TOOLS_DIR}/qemu && cd ${SOTFWARE_TOOLS_DIR}/qemu && tar -xvf arm64_qemu-riscv.tar.xz && rm arm64_qemu-riscv.tar.xz)
 	endif
