use open riscv gcc as default

--- a/make.conf
+++ b/make.conf
@@ -13,7 +13,7 @@ C_BUILD_DIR := ${BUILD_DIR}/c_compiled
 DUMMY_TEST_PROGRAM  := ${BUILD_DIR}/dummy_test/dummy_test
 
 #Compile setting
-USE_OPEN_GNU_GCC := 0
+USE_OPEN_GNU_GCC := 1
 USE_HB_SDK := 1
 TARGET := main
 SRCDIRS = ${C_SRC_DIR} src
@@ -53,6 +53,7 @@ SOTFWARE_MAKEFILES_DIR =$(SOTFWARE_DEPS_ROOT)/makefiles
 SOTFWARE_LIBS_DIR := $(SOTFWARE_DEPS_ROOT)/libs
 SOTFWARE_TEST_DIR := $(SOTFWARE_DEPS_ROOT)/test/
 ISA_TEST_DIR := $(SOTFWARE_TEST_DIR)/isa_test
+RISCV_BENCHMARK_DIR := $(SOTFWARE_TEST_DIR)/benchmarks
 
 HARDWARE_DEPS_ROOT := $(DEPENDENCY_DIR)/hardware-level
 HARDWARE_TOOLS_DIR := $(HARDWARE_DEPS_ROOT)/bin
@@ -69,7 +70,7 @@ COMPILE_PREFIX ?= riscv64-unknown-elf-
 ifeq ($(USE_OPEN_GNU_GCC),0)
 RISCV_GCC_ROOT ?= $(SOTFWARE_TOOLS_DIR)/gcc
 else
-RISCV_GCC_ROOT ?= $()/gcc_open
+RISCV_GCC_ROOT ?= $(SOTFWARE_TOOLS_DIR)/gcc_open
 endif
 RISCV_OPENOCD_ROOT ?= $(SOTFWARE_TOOLS_DIR)/openocd
 QEMU_EXEC ?= $(SOTFWARE_TOOLS_DIR)/qemu/bin/qemu-riscv32
