--- a/deps/software-level/makefiles/Makefile.conf
+++ b/deps/software-level/makefiles/Makefile.conf
@@ -1,10 +1,5 @@
-EXTRA_MKS := $(wildcard Makefile.local $(SOTFWARE_MAKEFILES_DIR)/Makefile.global)
-ifneq ("$(strip $(EXTRA_MKS))", "")
-$(info Obtaining addtional make variables from $(EXTRA_MKS))
-include $(EXTRA_MKS)
-endif
-
-
+HBIRD_SDK_NMSIS = $(SOTFWARE_LIBS_DIR)/NMSIS
+HBIRD_SDK_SOC = $(SOTFWARE_LIBS_DIR)/SoC/$(SOC)
 
 ARCH := $(shell uname -m)
 ifeq ($(ARCH),x86_64)
@@ -68,6 +63,16 @@ else
 endif
 
 
+ifdef SOTFWARE_MAKEFILES_DIR
+include $(SOTFWARE_MAKEFILES_DIR)/Makefile.files
+include $(SOTFWARE_MAKEFILES_DIR)/Makefile.soc
+
+DOWNLOAD_UPPER = $(call uc, $(DOWNLOAD))
+
+
+
+DEFAULT_RISCV_ARCH ?= rv32imac
+DEFAULT_RISCV_ABI ?= ilp32
 ifeq ($(RISCV_ARCH),)
 $(warning RISCV_ARCH is not defined, use $(DEFAULT_RISCV_ARCH) as default)
 RISCV_ARCH := $(DEFAULT_RISCV_ARCH)
@@ -153,7 +158,7 @@ LDFLAGS += -u _isatty -u _write -u _sbrk -u _read -u _close -u _fstat -u _lseek
 
 # Prerequesties
 MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.soc
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.env
+MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.conf
 MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.core
 MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.files
 MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.misc
@@ -164,3 +169,5 @@ MAKEFILE_PREREQS += Makefile
 LINK_PREREQS += $(LINKER_SCRIPT)
 
 COMMON_PREREQS = $(MAKEFILE_PREREQS) $(LINK_PREREQS)
+
+endif
