--- a/deps/software-level/makefiles/Makefile.conf
+++ b/deps/software-level/makefiles/Makefile.conf
@@ -149,7 +149,7 @@ LIB_OPT = $(addprefix -L, $(sort $(LIBDIRS)))
 LDFLAGS += -T $(LINKER_SCRIPT) -lstdc++ -nostartfiles -Wl,-M,-Map=$(TARGET).map \
 		$(GC_LDFLAGS) $(NEWLIB_LDFLAGS) --specs=nosys.specs \
 		$(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
-LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS)
+LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
 	
 
 # More options needed by -flto, if not passed, will fail in linking phase
