add coremark and dhrystone benchmarks

--- a/deps/software-level/makefiles/Makefile.conf
+++ b/deps/software-level/makefiles/Makefile.conf
@@ -139,7 +139,7 @@ COMMON_FLAGS_ASM += -S -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) -mcmodel=medany \
 # SOC_XXX and BOARD_XXX
 COMMON_FLAGS += -DSOC_$(SOC_UPPER) -DBOARD_$(BOARD_UPPER)
 
-CFLAGS += $(COMMON_FLAGS) $(C_INCLUDE_OPT) $(MKDEP_OPT)
+CFLAGS += $(COMMON_FLAGS) $(C_INCLUDE_OPT) $(MKDEP_OPT) $(OPT_C_FLAGS)
 CFLAGS_ASM += $(COMMON_FLAGS_ASM) $(C_INCLUDE_OPT) $(MKDEP_OPT)
 CXXFLAGS += $(COMMON_FLAGS) $(CXX_INCLUDE_OPT) $(MKDEP_OPT)
 ASMFLAGS += $(COMMON_FLAGS) $(ASM_INCLUDE_OPT) $(MKDEP_OPT)
@@ -148,7 +148,7 @@ LIB_OPT = $(addprefix -L, $(sort $(LIBDIRS)))
 
 LDFLAGS += -T $(LINKER_SCRIPT) -lstdc++ -nostartfiles -Wl,-M,-Map=$(TARGET).map \
 		$(GC_LDFLAGS) $(NEWLIB_LDFLAGS) --specs=nosys.specs \
-		$(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
+		$(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) $(OPT_LD_FLAGS)
 LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
 	
 
