--- a/make.conf
+++ b/make.conf
@@ -12,12 +12,12 @@ C_SRC_DIR := ${SIM_ROOT_DIR}/csrc
 C_BUILD_DIR := ${BUILD_DIR}/c_compiled
 
 #Compile setting
-USE_OPEN_GNU_GCC := 1
+USE_OPEN_GNU_GCC ?= 1
 USE_HB_SDK := 1
 TARGET := main
-SRCDIRS = ${C_SRC_DIR} src
-TEST_SRCDIRS = ${TEST_SRCDIR} src
-INCDIRS = ${C_SRC_DIR} inc
+SRCDIRS := ${C_SRC_DIR} src
+TEST_SRCDIRS := ${TEST_SRCDIR} src
+INCDIRS := ${C_SRC_DIR} inc
 COMMON_FLAGS := -O2
 #end
 
@@ -53,6 +53,8 @@ SOTFWARE_LIBS_DIR := $(SOTFWARE_DEPS_ROOT)/libs
 SOTFWARE_TEST_DIR := $(SOTFWARE_DEPS_ROOT)/test/
 ISA_TEST_DIR := $(SOTFWARE_TEST_DIR)/isa_test
 RISCV_BENCHMARK_DIR := $(SOTFWARE_TEST_DIR)/benchmarks
+COREMARK_DIR := $(SOTFWARE_TEST_DIR)/coremark
+DHRYSTONE_DIR := $(SOTFWARE_TEST_DIR)/dhrystone
 
 HARDWARE_DEPS_ROOT := $(DEPENDENCY_DIR)/hardware-level
 HARDWARE_TOOLS_DIR := $(HARDWARE_DEPS_ROOT)/bin
