--- a/deps/software-level/makefiles/Makefile
+++ b/deps/software-level/makefiles/Makefile
@@ -1,4 +1,7 @@
+ifndef CONF_DEFINED
 include $(SIM_ROOT_DIR)/make.conf
+endif
+
 
 SIMULATION ?= 0
 V ?=
@@ -16,7 +19,12 @@ $(info Obtaining addtional make variables from $(EXTRA_MKS))
 include $(EXTRA_MKS)
 endif
 
+HBIRD_SDK_NMSIS = $(SOTFWARE_LIBS_DIR)/NMSIS
+HBIRD_SDK_SOC = $(SOTFWARE_LIBS_DIR)/SoC/$(SOC)
+
 include $(SOTFWARE_MAKEFILES_DIR)/gmsl/gmsl
+include $(SOTFWARE_MAKEFILES_DIR)/Makefile.files
+include $(SOTFWARE_MAKEFILES_DIR)/Makefile.soc
 include $(SOTFWARE_MAKEFILES_DIR)/Makefile.misc
 include $(SOTFWARE_MAKEFILES_DIR)/Makefile.conf
 include $(SOTFWARE_MAKEFILES_DIR)/Makefile.rules
