--- a/make.conf
+++ b/make.conf
@@ -1,3 +1,4 @@
+CONF_DEFINED = 1
 ARCH := $(shell uname -m)
 
 SIM_ROOT_DIR ?=
@@ -9,16 +10,16 @@ TEST_SRCDIR := ${SIM_ROOT_DIR}/test_src
 
 BUILD_DIR      := ${SIM_ROOT_DIR}/build
 C_SRC_DIR := ${SIM_ROOT_DIR}/csrc
-C_BUILD_DIR := ${BUILD_DIR}/c_compiled
+C_BUILD_DIR = ${BUILD_DIR}/c_compiled
 
 #Compile setting
-USE_OPEN_GNU_GCC ?= 1
+USE_OPEN_GNU_GCC ?= 1 
 USE_HB_SDK := 1
 TARGET := main
-SRCDIRS := ${C_SRC_DIR} src
-TEST_SRCDIRS := ${TEST_SRCDIR} src
-INCDIRS := ${C_SRC_DIR} inc
-COMMON_FLAGS := -O2
+SRCDIRS ?= ${C_SRC_DIR} src
+TEST_SRCDIRS ?= ${TEST_SRCDIR} src
+INCDIRS ?= ${C_SRC_DIR} inc
+COMMON_FLAGS ?= -O2
 #end
 
 #hardware simulation settings
@@ -77,6 +78,7 @@ RISCV_OPENOCD_ROOT ?= $(SOTFWARE_TOOLS_DIR)/openocd
 QEMU_EXEC ?= $(SOTFWARE_TOOLS_DIR)/qemu/bin/qemu-riscv32
 
 CC      := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)gcc)
+LD      := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)ld)
 CXX     := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)g++)
 OBJDUMP := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)objdump)
 OBJCOPY := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)objcopy)
