--- a/deps/software-level/test/isa_test/test_src/Makefile
+++ b/deps/software-level/test/isa_test/test_src/Makefile
@@ -5,7 +5,7 @@
 XLEN ?= 32
 
 include $(SIM_ROOT_DIR)/make.conf
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.env
+include $(SOTFWARE_MAKEFILES_DIR)/Makefile.conf
 src_dir := $(ISA_TEST_DIR)/test_src/
 OUT_DIR = $(BUILD_DIR)/test_compiled
 
