--- a/deps/software-level/makefiles/Makefile.conf
+++ b/deps/software-level/makefiles/Makefile.conf
@@ -61,7 +61,7 @@ else
 endif
 
 
-ifdef SOTFWARE_MAKEFILES_DIR
+ifdef SOFTWARE_MAKEFILES_DIR
 
 DOWNLOAD_UPPER = $(call uc, $(DOWNLOAD))
 DEFAULT_RISCV_ARCH ?= rv32imac
@@ -120,7 +120,7 @@ COMMON_FLAGS += -march=$(RISCV_ARCH)_zicsr
 else
 COMMON_FLAGS += -march=$(RISCV_ARCH)
 endif
-COMMON_FLAGS += -g  -mabi=$(RISCV_ABI) -mcmodel=medany \
+COMMON_FLAGS += -mabi=$(RISCV_ABI) -mcmodel=medany \
 		$(GC_CFLAGS) -fno-common -DDOWNLOAD_MODE=DOWNLOAD_MODE_$(DOWNLOAD_UPPER) \
 		-DDOWNLOAD_MODE_STRING=\"$(DOWNLOAD_UPPER)\"
 
@@ -137,12 +137,26 @@ CFLAGS_ASM += $(COMMON_FLAGS_ASM) $(C_INCLUDE_OPT) $(MKDEP_OPT)
 CXXFLAGS += $(COMMON_FLAGS) $(CXX_INCLUDE_OPT) $(MKDEP_OPT)
 ASMFLAGS += $(COMMON_FLAGS) $(ASM_INCLUDE_OPT) $(MKDEP_OPT)
 
+CXX_STANDARD ?= c++17
+
+# C++ 兼容性标志
+CXX_COMPAT_FLAGS = -std=$(CXX_STANDARD) \
+    -fno-use-cxa-atexit \
+    -fno-threadsafe-statics \
+    -fno-rtti \
+    -fno-exceptions
+
+# 更新 CXXFLAGS 以包含兼容性标志
+CXXFLAGS += $(CXX_COMPAT_FLAGS)
+
 LIB_OPT = $(addprefix -L, $(sort $(LIBDIRS)))
 
-LDFLAGS += -T $(LINKER_SCRIPT) -lstdc++ -nostartfiles -Wl,-M,-Map=$(TARGET).map \
+
+LDFLAGS += -T $(LINKER_SCRIPT) -nostartfiles -Wl,-M,-Map=$(TARGET).map \
 		$(GC_LDFLAGS) $(NEWLIB_LDFLAGS) --specs=nosys.specs \
-		$(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) $(OPT_LD_FLAGS)
-LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
+		-Wl,--print-memory-usage $(EXT_LDFLAGS) \
+		$(LIB_OPT) $(LDLIBS) -lstdc++ -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) $(OPT_LD_FLAGS)
+LDFLAGS2 += $(LIB_OPT) $(LDLIBS) -lstdc++ -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
 	
 
 # More options needed by -flto, if not passed, will fail in linking phase
@@ -150,12 +164,12 @@ LDFLAGS += -u _isatty -u _write -u _sbrk -u _read -u _close -u _fstat -u _lseek
 
 
 # Prerequesties
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.soc
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.conf
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.core
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.files
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.misc
-MAKEFILE_PREREQS += $(SOTFWARE_MAKEFILES_DIR)/Makefile.rules
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.soc
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.conf
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.core
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.files
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.misc
+MAKEFILE_PREREQS += $(SOFTWARE_MAKEFILES_DIR)/Makefile.rules
 MAKEFILE_PREREQS += $(EXTRA_MKS)
 MAKEFILE_PREREQS += Makefile
 
