--- a/make.conf
+++ b/make.conf
@@ -13,7 +13,7 @@ C_SRC_DIR := ${SIM_ROOT_DIR}/csrc
 C_BUILD_DIR = ${BUILD_DIR}/c_compiled
 
 #Compile setting
-USE_OPEN_GNU_GCC ?= 1 
+USE_OPEN_GNU_GCC ?= 1
 USE_HB_SDK := 1
 TARGET := main
 SRCDIRS ?= ${C_SRC_DIR} src
@@ -27,13 +27,13 @@ COMMON_FLAGS ?= -O2
 SIM_TOOL      := verilator5
 
 PROGRAM_NAME     := ${TARGET}
-TEST_PROGRAM_NAME     := rv32mi-p-breakpoint
+TEST_PROGRAM_NAME     := rv32mi-p-illegal
 PROGRAM     := ${BUILD_DIR}/c_compiled/${PROGRAM_NAME}
 TEST_PROGRAM     := ${BUILD_DIR}/test_compiled/${TEST_PROGRAM_NAME}
 SIM_OUT_DIR     := sim_out
 TEST_RUNDIR := test_out
 VCS_DIR ?=
-DUMPWAVE := 1
+DUMPWAVE := 0
 #end
 
 
@@ -42,20 +42,21 @@ CORE     := e203
 CFG      := ${CORE}_config
 XLEN     := 32
 SOC      := hbirdv2
-BOARD    ?= ddr200t
+BOARD    ?= mcu200t
 DOWNLOAD ?= ilm
 #end
 
 DEPENDENCY_DIR := $(SIM_ROOT_DIR)/deps/
 SOTFWARE_DEPS_ROOT := $(DEPENDENCY_DIR)/software-level
 SOTFWARE_TOOLS_DIR := $(SOTFWARE_DEPS_ROOT)/bin
-SOTFWARE_MAKEFILES_DIR =$(SOTFWARE_DEPS_ROOT)/makefiles
+SOFTWARE_MAKEFILES_DIR =$(SOTFWARE_DEPS_ROOT)/makefiles
 SOTFWARE_LIBS_DIR := $(SOTFWARE_DEPS_ROOT)/libs
 SOTFWARE_TEST_DIR := $(SOTFWARE_DEPS_ROOT)/test/
 ISA_TEST_DIR := $(SOTFWARE_TEST_DIR)/isa_test
 RISCV_BENCHMARK_DIR := $(SOTFWARE_TEST_DIR)/benchmarks
 COREMARK_DIR := $(SOTFWARE_TEST_DIR)/coremark
 DHRYSTONE_DIR := $(SOTFWARE_TEST_DIR)/dhrystone
+TFLM_DIR := $(SOTFWARE_TEST_DIR)/tflm
 
 HARDWARE_DEPS_ROOT := $(DEPENDENCY_DIR)/hardware-level
 HARDWARE_TOOLS_DIR := $(HARDWARE_DEPS_ROOT)/bin
