--- a/deps/software-level/makefiles/Makefile
+++ b/deps/software-level/makefiles/Makefile
@@ -9,11 +9,11 @@ SILENT ?=
 RTOS ?=
 PFLOAT ?= 0
 NEWLIB ?= nano
-NOGC ?=
+NOGC ?= 0
 BANNER ?=
 
 
-EXTRA_MKS := $(wildcard Makefile.local $(SOTFWARE_MAKEFILES_DIR)/Makefile.global)
+EXTRA_MKS := $(wildcard Makefile.local $(SOFTWARE_MAKEFILES_DIR)/Makefile.global)
 ifneq ("$(strip $(EXTRA_MKS))", "")
 $(info Obtaining addtional make variables from $(EXTRA_MKS))
 include $(EXTRA_MKS)
@@ -22,9 +22,9 @@ endif
 HBIRD_SDK_NMSIS = $(SOTFWARE_LIBS_DIR)/NMSIS
 HBIRD_SDK_SOC = $(SOTFWARE_LIBS_DIR)/SoC/$(SOC)
 
-include $(SOTFWARE_MAKEFILES_DIR)/gmsl/gmsl
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.files
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.soc
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.misc
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.conf
-include $(SOTFWARE_MAKEFILES_DIR)/Makefile.rules
+include $(SOFTWARE_MAKEFILES_DIR)/gmsl/gmsl
+include $(SOFTWARE_MAKEFILES_DIR)/Makefile.files
+include $(SOFTWARE_MAKEFILES_DIR)/Makefile.soc
+include $(SOFTWARE_MAKEFILES_DIR)/Makefile.misc
+include $(SOFTWARE_MAKEFILES_DIR)/Makefile.conf
+include $(SOFTWARE_MAKEFILES_DIR)/Makefile.rules
