--- a/deps/software-level/makefiles/Makefile.rules
+++ b/deps/software-level/makefiles/Makefile.rules
@@ -73,13 +73,12 @@ help:
 
 $(TARGET).elf: $(ALL_OBJS)
 	$(TRACE_LINK)
-	$(Q)$(CC) $(CFLAGS) $(ALL_OBJS) -o $@ $(LDFLAGS)
+	$(Q)$(CXX) $(CFLAGS) $(ALL_OBJS) -o $@ $(LDFLAGS)
 	$(Q)$(SIZE) $@
 
 $(TARGET).out: $(ALL_OBJS)
 	$(TRACE_LINK)
-	$(CC) $(CFLAGS) $(ALL_OBJS) -o $@ $(LDFLAGS2)
-	$(CC) $(CFLAGS) $(ALL_OBJS) -o $@ $(LDFLAGS2)
+	$(CXX) $(CFLAGS) $(ALL_OBJS) -o $@ $(LDFLAGS2)
 
 $(ALL_ASM_OBJS): %.o: % $(COMMON_PREREQS)
 	$(TRACE_ASSEMBLE)
@@ -97,14 +96,13 @@ $(ALL_CXX_OBJS): %.o: % $(COMMON_PREREQS)
 	$(Q)$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 dasm: $(TARGET).elf
-	$(OBJDUMP) -S -D $< > $(TARGET).dump
+	$(OBJDUMP) -S -d $< > $(TARGET).dump
 	$(OBJDUMP) -d $< > $(TARGET).dasm
-	$(OBJDUMP) -fhSD $< > $(TARGET).dis
 	$(OBJCOPY) $< -O ihex $(TARGET).hex
 	$(OBJCOPY) $< -O verilog $(TARGET).verilog
 
-	sed -i 's/@8000/@0000/g' $(TARGET).verilog
-	sed -i 's/@00002FB8/@00002000/g' $(TARGET).verilog
+# sed -i 's/@8000/@0000/g' $(TARGET).verilog
+# sed -i 's/@00002FB8/@00002000/g' $(TARGET).verilog
 
 asm: $(ALL_ASM)
 	
