--- a/make.conf
+++ b/make.conf
@@ -9,7 +9,7 @@ DEFAULT_RISCV_ABI ?= ilp32
 TEST_SRCDIR := ${SIM_ROOT_DIR}/test_src
 
 BUILD_DIR      := ${SIM_ROOT_DIR}/build
-C_SRC_DIR := ${SIM_ROOT_DIR}/csrc
+C_SRC_DIR := ${SIM_ROOT_DIR}/eai_csrc
 C_BUILD_DIR = ${BUILD_DIR}/c_compiled
 
 #Compile setting
