--- a/make.conf
+++ b/make.conf
@@ -19,7 +19,7 @@ TARGET := main
 SRCDIRS ?= ${C_SRC_DIR} src
 TEST_SRCDIRS ?= ${TEST_SRCDIR} src
 INCDIRS ?= ${C_SRC_DIR} inc
-COMMON_FLAGS ?= -O2
+COMMON_FLAGS ?= -O2 -DUSE_SIM_FREQ -DSYSTEM_CLOCK=300000
 #end
 
 #hardware simulation settings
